--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@fontsource-variable/jetbrains-mono": "^5.2.5",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.483.0",
-    "motion": "^12.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
