--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource-variable/jetbrains-mono": "^5.2.5",
+    "@fontsource-variable/manrope": "^5.2.5",
     "@next/third-parties": "^15.2.4",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
